<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_state_estimator</name>
  <version>0.0.0</version>
  <description>TODO: UAV state estimation using EKF with IMU and GPS fusion</description>
  <maintainer email="vul45845@gmail.com">lunog</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>Eigen3</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
